# E6Hackathon

./: CMakeLists.txt  README.md  generate_data.py
data/: sample_data.csv
src/: main.cpp
src/core/: data_structures.hpp  sampling.hpp  sketching.hpp
src/query/: aggregator.hpp  executor.hpp  parser.hpp
src/utils/: benchmark.hpp  config.hpp  string_utils.hpp
tests/: core_tests.cpp  query_tests.cpp  utils_tests.cpp
